--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>영문 폰트 변환</title>
+  <title>영문 폰트 미리보기</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -16,9 +16,9 @@
     </ul>
   </nav>
   <div class="container">
-    <h1>영문 폰트 변환</h1>
+    <h1>영문 폰트 미리보기</h1>
     <div class="input-container">
-      <textarea id="input-text" placeholder="영문 텍스트를 입력하세요..."></textarea>
+      <textarea id="input-text" placeholder="텍스트를 입력하세요..."></textarea>
       <button id="generate-btn">폰트 변환</button>
     </div>
     <div id="font-grid" class="font-grid"></div>
